--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ html
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Minha Primeira Página</title>
+<title>Minha Primeira Página</carlos eduardo title>
 </head>
 <body>
 <h1>Olá, mundo!</h1>
