--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ Carlos Eduardo Martins Mayer
 <h1>Olá, mundo!</h1>
 <p>Esta é minha primeira página publicada no GitHub Pages.</p>
 </body>
-</html>
+</CarlosEduardoMartinsMayer>
