--- a/index.html
+++ b/index.html
@@ -11,3 +11,14 @@ Carlos Eduardo Martins Mayer
 <p>Esta é minha primeira página publicada no GitHub Pages.</p>
 </body>
 </CarlosEduardoMartinsMayer>
+Carlos Eduardo Martins Mayer
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<title>Minha Primeira Página</carlos eduardo title>
+</head>
+<body>
+<h1>Olá, mundo!</h1>
+<p>Esta é minha primeira página publicada no GitHub Pages.</p>
+</body>
